--- a/View/View/CustomLogin/MyLoginView.xib
+++ b/View/View/CustomLogin/MyLoginView.xib
@@ -13,8 +13,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="MyLoginView" customModule="View" customModuleProvider="target">
             <connections>
                 <outlet property="backgrView" destination="78x-pr-vqC" id="gLn-ZY-Vg8"/>
-                <outlet property="formView" destination="6ni-bf-KsI" id="4pd-bH-mEq"/>
+                <outlet property="formView" destination="6ni-bf-KsI" id="md9-j0-Lqz"/>
                 <outlet property="myView" destination="iN0-l3-epB" id="HYp-AR-uXX"/>
+                <outlet property="password" destination="aIu-8z-V9F" id="Z94-iG-XMR"/>
+                <outlet property="username" destination="clO-3v-Xus" id="gmW-Ub-v47"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -25,7 +27,7 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="burg" translatesAutoresizingMaskIntoConstraints="NO" id="78x-pr-vqC">
                     <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                 </imageView>
-                <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ni-bf-KsI">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ni-bf-KsI">
                     <rect key="frame" x="19" y="149.5" width="337.5" height="388"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lQ8-P8-Cp5">
