--- a/View/View/CustomLogin/MyLoginView.xib
+++ b/View/View/CustomLogin/MyLoginView.xib
@@ -15,8 +15,8 @@
                 <outlet property="backgrView" destination="78x-pr-vqC" id="gLn-ZY-Vg8"/>
                 <outlet property="formView" destination="6ni-bf-KsI" id="md9-j0-Lqz"/>
                 <outlet property="myView" destination="iN0-l3-epB" id="HYp-AR-uXX"/>
-                <outlet property="password" destination="aIu-8z-V9F" id="Z94-iG-XMR"/>
-                <outlet property="username" destination="clO-3v-Xus" id="gmW-Ub-v47"/>
+                <outlet property="pasword" destination="f46-hO-8i6" id="OW7-7Y-pE8"/>
+                <outlet property="username" destination="gFM-da-aiP" id="HLX-NO-1kJ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -31,74 +31,74 @@
                     <rect key="frame" x="19" y="149.5" width="337.5" height="388"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign In" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lQ8-P8-Cp5">
-                            <rect key="frame" x="17" y="15" width="135" height="38.5"/>
+                            <rect key="frame" x="17" y="15" width="135" height="29"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                             <color key="textColor" red="0.98498272490000005" green="1" blue="0.98440679679999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clO-3v-Xus" userLabel="username">
-                            <rect key="frame" x="63" y="104.5" width="267" height="39"/>
-                            <color key="backgroundColor" red="0.98498272490000005" green="1" blue="0.98440679679999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="267" id="Psk-MA-PV5"/>
-                                <constraint firstAttribute="height" constant="39" id="QlH-B9-bC0"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aIu-8z-V9F" userLabel="password">
-                            <rect key="frame" x="63" y="157.5" width="267" height="39"/>
-                            <color key="backgroundColor" red="0.98498272490000005" green="1" blue="0.98440679679999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="39" id="caZ-qd-YX3"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                            <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="username" translatesAutoresizingMaskIntoConstraints="NO" id="HzV-1l-kLh">
-                            <rect key="frame" x="8" y="104.5" width="47" height="39"/>
-                        </imageView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="username" translatesAutoresizingMaskIntoConstraints="NO" id="o9E-eg-6Vn">
-                            <rect key="frame" x="7" y="156.5" width="47" height="39"/>
+                            <rect key="frame" x="8" y="103" width="54" height="41"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="39" id="3er-Px-AMk"/>
+                                <constraint firstAttribute="height" constant="41" id="e6x-GK-hTn"/>
+                                <constraint firstAttribute="width" constant="54" id="i8N-V0-e3v"/>
                             </constraints>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GFz-Mc-CSN">
-                            <rect key="frame" x="195" y="246" width="135" height="39"/>
-                            <color key="backgroundColor" red="1" green="0.9983115905733384" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="username" translatesAutoresizingMaskIntoConstraints="NO" id="o9E-eg-6Vn">
+                            <rect key="frame" x="7" y="158" width="55" height="39"/>
+                        </imageView>
+                        <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="pasword" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="f46-hO-8i6">
+                            <rect key="frame" x="92" y="163" width="238" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="30" id="WR2-Cb-jyQ"/>
+                            </constraints>
+                            <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gFM-da-aiP">
+                            <rect key="frame" x="93" y="114" width="236.5" height="30"/>
+                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textInputTraits key="textInputTraits"/>
+                        </textField>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kg6-zn-kHb">
+                            <rect key="frame" x="194.5" y="261" width="135" height="33"/>
+                            <color key="backgroundColor" red="1" green="0.99831159059999997" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="33" id="b5c-jQ-ZRT"/>
+                                <constraint firstAttribute="width" constant="135" id="qMv-FG-DvM"/>
+                            </constraints>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                             <state key="normal" title="Log In">
                                 <color key="titleColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </state>
+                            <connections>
+                                <action selector="logIn:" destination="-1" eventType="touchUpInside" id="vK9-nE-jTR"/>
+
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstItem="HzV-1l-kLh" firstAttribute="leading" secondItem="6ni-bf-KsI" secondAttribute="leadingMargin" id="0Yx-cQ-gSk"/>
-                        <constraint firstAttribute="trailing" secondItem="GFz-Mc-CSN" secondAttribute="trailing" constant="7.5" id="3lT-cx-XAF"/>
-                        <constraint firstItem="lQ8-P8-Cp5" firstAttribute="top" secondItem="6ni-bf-KsI" secondAttribute="top" constant="15" id="4vg-zG-h2p"/>
-                        <constraint firstItem="o9E-eg-6Vn" firstAttribute="height" secondItem="aIu-8z-V9F" secondAttribute="height" id="7VD-oU-fR5"/>
-                        <constraint firstItem="HzV-1l-kLh" firstAttribute="height" secondItem="clO-3v-Xus" secondAttribute="height" id="8P3-EC-q8B"/>
-                        <constraint firstItem="o9E-eg-6Vn" firstAttribute="top" secondItem="HzV-1l-kLh" secondAttribute="bottom" constant="13" id="CwP-p5-j5x"/>
-                        <constraint firstItem="clO-3v-Xus" firstAttribute="leading" secondItem="HzV-1l-kLh" secondAttribute="trailing" constant="8" symbolic="YES" id="DNJ-0e-YNV"/>
-                        <constraint firstItem="aIu-8z-V9F" firstAttribute="top" secondItem="clO-3v-Xus" secondAttribute="bottom" constant="14" id="GcF-An-hdD"/>
-                        <constraint firstItem="GFz-Mc-CSN" firstAttribute="height" secondItem="aIu-8z-V9F" secondAttribute="height" id="Keh-d8-QqQ"/>
-                        <constraint firstAttribute="bottom" secondItem="GFz-Mc-CSN" secondAttribute="bottom" constant="103" id="LwM-ay-jG8"/>
-                        <constraint firstItem="HzV-1l-kLh" firstAttribute="bottom" secondItem="clO-3v-Xus" secondAttribute="bottom" id="OX5-hD-V1i"/>
-                        <constraint firstItem="HzV-1l-kLh" firstAttribute="top" secondItem="clO-3v-Xus" secondAttribute="top" id="QEl-9r-b3D"/>
-                        <constraint firstItem="lQ8-P8-Cp5" firstAttribute="leading" secondItem="6ni-bf-KsI" secondAttribute="leading" constant="17" id="Vou-Tj-RLl"/>
-                        <constraint firstItem="GFz-Mc-CSN" firstAttribute="width" secondItem="6ni-bf-KsI" secondAttribute="width" multiplier="0.4" id="Xzb-Kw-BFP"/>
-                        <constraint firstItem="o9E-eg-6Vn" firstAttribute="leading" secondItem="6ni-bf-KsI" secondAttribute="leading" constant="7" id="YU9-ef-6SW"/>
-                        <constraint firstItem="aIu-8z-V9F" firstAttribute="trailing" secondItem="clO-3v-Xus" secondAttribute="trailing" id="fVa-yH-kNW"/>
-                        <constraint firstItem="lQ8-P8-Cp5" firstAttribute="width" secondItem="6ni-bf-KsI" secondAttribute="width" multiplier="0.4" id="flf-C7-F0s"/>
-                        <constraint firstItem="clO-3v-Xus" firstAttribute="top" secondItem="lQ8-P8-Cp5" secondAttribute="bottom" constant="51" id="j9F-QQ-B7E"/>
-                        <constraint firstItem="aIu-8z-V9F" firstAttribute="leading" secondItem="clO-3v-Xus" secondAttribute="leading" id="rMg-ZZ-Esb"/>
-                        <constraint firstItem="aIu-8z-V9F" firstAttribute="leading" secondItem="o9E-eg-6Vn" secondAttribute="trailing" constant="9" id="sJk-QV-NEj"/>
-                        <constraint firstItem="lQ8-P8-Cp5" firstAttribute="height" secondItem="6ni-bf-KsI" secondAttribute="height" multiplier="0.1" id="xIe-Qv-q59"/>
-                        <constraint firstAttribute="trailing" secondItem="clO-3v-Xus" secondAttribute="trailing" constant="7.5" id="yxO-PL-1Qn"/>
+                        <constraint firstItem="f46-hO-8i6" firstAttribute="trailing" secondItem="6ni-bf-KsI" secondAttribute="trailingMargin" id="0EM-KW-ws7"/>
+                        <constraint firstItem="f46-hO-8i6" firstAttribute="centerX" secondItem="gFM-da-aiP" secondAttribute="centerX" id="2LZ-W1-F5r"/>
+                        <constraint firstItem="lQ8-P8-Cp5" firstAttribute="top" secondItem="6ni-bf-KsI" secondAttribute="top" constant="15" id="3c4-pY-qyK"/>
+                        <constraint firstItem="f46-hO-8i6" firstAttribute="trailing" secondItem="gFM-da-aiP" secondAttribute="trailing" id="5ki-BO-fvq"/>
+                        <constraint firstItem="lQ8-P8-Cp5" firstAttribute="leading" secondItem="6ni-bf-KsI" secondAttribute="leading" constant="17" id="BFf-SI-OWg"/>
+                        <constraint firstItem="HzV-1l-kLh" firstAttribute="bottom" secondItem="gFM-da-aiP" secondAttribute="bottom" id="BPN-MW-r5l"/>
+                        <constraint firstItem="HzV-1l-kLh" firstAttribute="top" secondItem="lQ8-P8-Cp5" secondAttribute="bottom" constant="59" id="CyM-pq-vEx"/>
+                        <constraint firstAttribute="trailing" secondItem="lQ8-P8-Cp5" secondAttribute="trailing" constant="185.5" id="G0n-p9-6bU"/>
+                        <constraint firstItem="f46-hO-8i6" firstAttribute="top" secondItem="gFM-da-aiP" secondAttribute="bottom" constant="19" id="Iik-OO-Zg1"/>
+                        <constraint firstItem="o9E-eg-6Vn" firstAttribute="top" secondItem="HzV-1l-kLh" secondAttribute="bottom" constant="14" id="Llk-eA-4R4"/>
+                        <constraint firstItem="lQ8-P8-Cp5" firstAttribute="width" secondItem="6ni-bf-KsI" secondAttribute="width" multiplier="0.4" id="VRH-Rd-rIx"/>
+                        <constraint firstItem="f46-hO-8i6" firstAttribute="centerY" secondItem="o9E-eg-6Vn" secondAttribute="centerY" id="deb-13-KU0"/>
+                        <constraint firstItem="HzV-1l-kLh" firstAttribute="centerX" secondItem="o9E-eg-6Vn" secondAttribute="centerX" id="j9H-bZ-wQO"/>
+                        <constraint firstItem="Kg6-zn-kHb" firstAttribute="trailing" secondItem="f46-hO-8i6" secondAttribute="trailing" id="kJM-vl-gJ9"/>
+                        <constraint firstItem="gFM-da-aiP" firstAttribute="leading" secondItem="HzV-1l-kLh" secondAttribute="trailing" constant="31" id="lr5-3h-VOp"/>
+                        <constraint firstItem="HzV-1l-kLh" firstAttribute="trailing" secondItem="o9E-eg-6Vn" secondAttribute="trailing" id="qPf-Yz-DgK"/>
+                        <constraint firstItem="Kg6-zn-kHb" firstAttribute="top" secondItem="f46-hO-8i6" secondAttribute="bottom" constant="68" id="sfP-p2-V1z"/>
+                        <constraint firstItem="HzV-1l-kLh" firstAttribute="leading" secondItem="6ni-bf-KsI" secondAttribute="leadingMargin" id="v12-Ul-Kxt"/>
+                        <constraint firstAttribute="bottom" secondItem="Kg6-zn-kHb" secondAttribute="bottom" constant="94" id="y4S-Zr-3tz"/>
                     </constraints>
                 </view>
             </subviews>
@@ -114,7 +114,7 @@
                 <constraint firstItem="78x-pr-vqC" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="var-EF-A6A"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <point key="canvasLocation" x="-7" y="-339"/>
+            <point key="canvasLocation" x="-215.19999999999999" y="-345.87706146926541"/>
         </view>
     </objects>
     <resources>
